# Text2BPMN

./: .gitattributes  .gitignore  README.md  baseline.txt  create_xml.txt  extract.txt  extractAgent.txt  output.json  pyproject.toml  requirements.txt  validate.txt  validate_Agent.txt  xml.txt  xml_Agent.txt  {step}.txt
Rendering/: renamejson.py  rendering.py  simple_pizza_delivery.bpmn  simple_test.bpmn  test.py
configs/: graphs.yaml
data/bpmn/: baseline_0.bpmn  baseline_1.bpmn  baseline_2.bpmn  baseline_3.bpmn  baseline_fiveshot0_easy.bpmn  baseline_fiveshot1_easy.bpmn  baseline_fiveshot2_medium.bpmn  baseline_fiveshot3_medium.bpmn  baseline_fiveshot4_hard.bpmn  baseline_fiveshot_full0.bpmn  baseline_fiveshot_full1.bpmn  baseline_fiveshot_full10.bpmn  baseline_fiveshot_full11.bpmn  baseline_fiveshot_full12.bpmn  baseline_fiveshot_full13.bpmn  baseline_fiveshot_full14.bpmn  baseline_fiveshot_full15.bpmn  baseline_fiveshot_full16.bpmn  baseline_fiveshot_full17.bpmn  baseline_fiveshot_full18.bpmn  baseline_fiveshot_full19.bpmn  baseline_fiveshot_full2.bpmn  baseline_fiveshot_full20.bpmn  baseline_fiveshot_full21.bpmn  baseline_fiveshot_full22.bpmn  baseline_fiveshot_full23.bpmn  baseline_fiveshot_full24.bpmn  baseline_fiveshot_full25.bpmn  baseline_fiveshot_full26.bpmn  baseline_fiveshot_full27.bpmn  baseline_fiveshot_full28.bpmn  baseline_fiveshot_full29.bpmn  baseline_fiveshot_full3.bpmn  baseline_full_0_.bpmn  (+177 more)
docs/: README.md
text2bpmn/: __main__.py  agents.py  config.py  convert.js  formats.py  graphs.py  models.py  nodes.py  states.py  tools.py  utils.py
(+44 files in other folders)
