[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text2bpmn"
version = "0.1.1"
description = "convert text to bpmn"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = []
[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
text2pbmn = "text2bpmn.__main__:main"